--- a/blog/templates/user.html
+++ b/blog/templates/user.html
@@ -10,7 +10,7 @@
                 {% if user.last_seen %}<p><i>Last seen on: {{user.last_seen}}</i></p>{% endif %}
                 <p>{{user.followers.count()}} followers |
                     {% if user.id == g.user.id %}
-                        <a href="{{url_for('edit')}}">Edit your profile</a>
+                        <a href="{{url_for('edit_user')}}">Edit your profile</a>
                     {% elif not g.user.is_following(user) %}
                         <a href="{{url_for('follow', nickname = user.nickname)}}">Follow</a>
                     {% else %}
